--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "dotenv": "^16.4.7",
     "mysql2": "^3.14.0",
     "pg": "^8.14.1",
+    "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
